pubg text change

--- a/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
+++ b/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
@@ -9,18 +9,19 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h3 class="content" style="border-bottom:1px solid #eee;">Best PUBG mobile under 10,000-20,000INR </h3>
-          <h5 class="content">Now a day world most popular mobile game is PUBG, top 10 mobiles list are give below which can easily support PUBG without any lag.</h5>
-          <p></p>
+          <h1 class="content_tittle" style="font-weight: 400;">Best PUBG mobile under 10,000-20,000INR </h1>
           <p>By <i><span style="color:blue;">Rohit Raj</span></i>- Updated on <b style="color: gray;">6 July, 2020</b></p>
+          <hr class="my-2">
+          <h3 style="font-weight: 400;">Now a day world most popular mobile game is PUBG, top 10 mobiles list are give below which can easily support PUBG without any lag.</h3>
+          <p></p>
         </div>
         <div>
           <img class="image" src="{% static 'image/mobile/pubg/PUBG-mobile.jpg'%}" alt="">
         </div>
         <div class="info">
-          <h4 class="content">PBUG Mobile</h4>
-          <p class="content"><span>PUBG</span> is an online multiplayer battle royale game developed and published by PUBG Corporation, a subsidiary of South Korean video game company <span>Bluehole</span>.</p>
-          <h5 class="content">Minimum system requirement for PUBG mobile:</h5>
+          <h3 style="font-weight: 400;">PBUG Mobile</h3>
+          <p><span>PUBG</span> is an online multiplayer battle royale game developed and published by PUBG Corporation, a subsidiary of South Korean video game company <span>Bluehole</span>.</p>
+          <h3 style="font-weight: 400;">Minimum system requirement for PUBG mobile:</h3>
           <ul class="content" style="border-bottom: 1px solid #eee;">
             <li>Need Android, Ios, Mobile Os</li>
             <li>Version- android 7 or High, IOS 9.0 or Higher</li>
@@ -32,14 +33,14 @@
         </div>
         <!-- 1 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">1. POCO F1</h2>
+          <h2 style="font-weight: 400;">1. POCO F1</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/pubg/poco-f1-1.jpg'%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-by Dhananjay Bhosale-<a href="https://www.youtube.com/watch?v=Pr24irDa5yM"><span>Review link</span></a></p>
-          <h4 class="content">About POCO F1</h4>
+          <h3 style="font-weight: 400;">About POCO F1</h3>
           <p class="content">POCO F1 is best PUBG mobile Under 15,000, Xiaomi at this range giving best feature. In my opinion POCO F1 support PUBG without any lag and there is no heating problem while playing PUBG in POCO F1. Xiaomi gives more feature in this mobile like Game trubo while playing we can do addition work also whatsapp messaging. At this range Poco f1 provide <span>Qualcomm Snapdragon 845</span> Processor.. This smartphone is available in 2 other variants like 6GB RAM + 128GB Storage, 8GB RAM + 256GB Storage with colour options like Black, Graphite Black, Rosso Red, Steel Blue, and Armoured Edition.</p>
-          <h4 class="content">POCO F1: Key specifications </h4>
+          <h3 style="font-weight: 400;">POCO F1: Key specifications </h3>
           <ul class="content">
             <li>It has a 6.18-inch display with an 18.7:9 aspect ratio and Corning Gorilla Glass 3 protection on top.</li>
             <li>Powering the Poco F1 is the Snapdragon 845 processor</li>
@@ -58,18 +59,17 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
         </div>
         <!-- 2 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">2. Realme 6</h2>
+          <h2 style="font-weight: 400;">2. Realme 6</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/pubg/Realme-6.webp'%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google-by www.bgr.in</p>
-          <h4 class="content">About Realme 6</h4>
+          <h3 style="font-weight: 400;">About Realme 6</h3>
           <p class="content">At this range realme provide more feature as compare to other phone. about pubg game play quite low performance to realme 6 but it can run PUBG mobile at the highest graphic setting. The phone comes with a 6.50-inch touchscreen display with a resolution of 1080x2400 pixels and an aspect ratio of 20:9. Realme 6 is powered by a 2.05GHz octa-core MediaTek Helio G90T processor. It comes with 4GB of RAM. The Realme 6 runs Android 10 and is powered by a 4300mAh non-removable battery. The Realme 6 supports proprietary fast charging.  </p>
-          <h4 class="content">Realme 6: Key specifications </h4>
+          <h3 style="font-weight: 400;">Realme 6: Key specifications </h3>
           <ul class="content">
             <li>Diaplay: 6.50-inch (1080x2400 pixels)</li>
             <li>Corning: Gorilla Glass 3</li>
@@ -89,19 +89,17 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
-
         </div>
         <!-- 3 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">3. Redmi Note 9 Pro</h2>
+          <h2 style="font-weight: 400;">3. Redmi Note 9 Pro</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/pubg/redmi-note-9-pro.jpeg'%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google-by <a href="https://www.digit.in/">www.digit.in</a></p>
-          <h4 class="content">About Note 9 Pro</h4>
+          <h3 style="font-weight: 400;">About Note 9 Pro</h3>
           <p class="content"><span>Xiaomi</span> Released his new note series which more powerfull than note note 8 pro. In note 9 pro pubg-mobile can run at higher graphic setting as well as no lags in pubg while playing. <span>Note 9 pro</span> support fast charging 18W and  5020mAh battery. The processor is a <span>Qualcomm Snapdragon 720G</span> which is surprisingly powerful for this segment which can improve your gaming experience.</p>
-          <h4 class="content">Note 9 Pro: Key specifications </h4>
+          <h3 style="font-weight: 400;">Note 9 Pro: Key specifications </h3>
           <ul class="content">
             <li>Diaplay: 	6.67-inch 1080x2400 pixels</li>
             <li>Corning: Gorilla Glass 3</li>
@@ -127,14 +125,14 @@
         </div>
         <!-- 4 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">4. Redmi Note 7 Pro</h2>
+          <h2 style="font-weight: 400;">4. Redmi Note 7 Pro</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/pubg/redmi-note-7-pro.jpg'%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-Uploaded by: Geekyranjit</p>
-          <h4 class="content">About Note 7 Pro</h4>
+          <h3 style="font-weight: 400;">About Note 7 Pro</h3>
           <p class="content"><span>redmi note 7 pro</span> one of best phone for pubg-mobile @12,999-INR(6/64GB). The mobile heats up while playing pubg but over all it's gives good experience. redmi note 7 pro powered by	<span>Qualcomm Snapdragon 675</span> which can run pubg at higher graphic setting. </p>
-          <h4 class="content">Note 7 Pro: Key specifications </h4>
+          <h3 style="font-weight: 400;">Note 7 Pro: Key specifications </h3>
           <ul class="content">
             <li>Diaplay: 6.3 inches, 1080 x 2340 pixels, 19.5:9 ratio (~409 ppi density)</li>
             <li>Corning: Corning Gorilla Glass 5</li>
@@ -154,20 +152,17 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
-
-
         </div>
         <!-- 5 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">5. Vivo S1</h2>
+          <h2 style="font-weight: 400;">5. Vivo S1</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/pubg/vivo-s1.jpg' %}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-Uploaded by: Mr. Phone</p>
-          <h4 class="content">About Vivo S1</h4>
+          <h3 style="font-weight: 400;">About Vivo S1</h3>
           <p class="content">Vivo S1 also in the list of best pubg mobile under 20k because Vivo S1 gives best gaming prefromance. The Vivo S1 is the first smartphone in India to be powered by the new MediaTek Helio P65 SoC. The Helio P65 is a mid-range processor based on a 12nm process. It has a pair of ARM Cortex-A75 cores clocked at 2GHz, and six Cortex-A55 cores clocked at 1.7GHz. For graphics, it has a Mali-G52 integrated GPU. Due to his awesome processor pubg can run at higher graphic settings. you can choose HDR graphics with Ultra frame rate on this smartphone. If you want to higher frame rate then you can put the Graphics to Smooth and Frame Rate to Extreme</p>
-          <h4 class="content">Vivo S1: Key specifications </h4>
+          <h3 style="font-weight: 400;">Vivo S1: Key specifications </h3>
           <ul class="content">
             <li>Diaplay: 6.38 inches, 1080 x 2340 pixels, 19.5:9 ratio (~404 ppi density)</li>
             <li>Super AMOLED capacitive touchscreen, 16M colors</li>
@@ -187,20 +182,17 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
-
-
         </div>
         <!-- 6 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">6. Redmi note 8 pro</h2>
+          <h2 style="font-weight: 400;">6. Redmi note 8 pro</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/pubg/redmi-note-8-pro.jpg' %}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-Uploaded by: YugaTech</p>
-          <h4 class="content">About Redmi note 8 pro</h4>
+          <h3 style="font-weight: 400;">About Redmi note 8 pro</h3>
           <p class="content">Most of xiaomi phone are in list of best pubg mobile under 20k because they are providing best feature to there phones that is why most of xiaomi are in list. Redmi note 8 pro starting from 14,999-INR(4/64GB) in india. Xiaomi is projecting it to be an ideal gaming smartphone in this price range. due his processor pubg run at higher graphic setting. Interestingly, you can choose HDR graphics with Ultra frame rate on this smartphone. If you want to higher frame rate then you can put the Graphics to Smooth and Frame Rate to Extreme. During our gameplay, choose Smooth graphics with extreme frame rate and the results were quite impressive. The gameplay was buttery smooth and we did not face any problem with frame drops or lags. </p>
-          <h4 class="content">Redmi note 8 pro: Key specifications </h4>
+          <h3 style="font-weight: 400;">Redmi note 8 pro: Key specifications </h3>
           <ul class="content">
             <li>Diaplay: 6.38 inches, 1080 x 2340 pixels, 19.5:9 ratio (~404 ppi density)</li>
             <li>Mediatek Helio G90T SoC: 2 Cortex-A76 performance cores at 2.05 GHz + 6 Cortex-A55 efficiency cores at 2 GHz</li>
@@ -220,18 +212,17 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
         </div>
         <!-- 7 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">7. Realme 5 pro</h2>
+          <h2 style="font-weight: 400;">7. Realme 5 pro</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/pubg/realme-5-pro.jpg' %}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-Uploaded by: GadgetIn</p>
-          <h4 class="content">About Realme 5 pro</h4>
+          <h3 style="font-weight: 400;">About Realme 5 pro</h3>
           <p class="content">I think in this list has most <span>Xiaomi</span> and <span>Realme</span> phones because they provides awesome feature at low range price. Realme 5 pro 6.3-inch screen has a full-HD+ resolution of 1080x2340. In realme 5 pro high graphic game like pubg and Asphalt 9 run without facing any frame drops. During our gameplay, choose Smooth graphics with extreme frame rate and the results were quite impressive. </p>
-          <h4 class="content">Realme 5 pro: Key specifications </h4>
+          <h3 style="font-weight: 400;">Realme 5 pro: Key specifications </h3>
           <ul class="content">
             <li>Diaplay: 6.3-inch screen has a full-HD+ resolution of 1080x2340</li>
             <li>Qualcomm SDM712 Snapdragon 712 (10 nm)</li>
@@ -251,20 +242,17 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
-
-
         </div>
         <!-- 8 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">8. Samsung M30s</h2>
+          <h2 style="font-weight: 400;">8. Samsung M30s</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/pubg/samsung-m30s-1.jpg' %}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google-by: <a href="https://themrphone.com/">themrphone.com</a></p>
-          <h4 class="content">About Samsung M30s</h4>
+          <h3 style="font-weight: 400;">About Samsung M30s</h3>
           <p class="content">The Galaxy M30s is an update to the Samsung Galaxy M30. This new smartphone packs in a 6,000mAh battery which is its highlight feature. We were impressed with the AMOLED display on this smartphone as it was crisp and had good viewing angles. Samsung has picked the Exynos 9611 SoC to power the Galaxy M30s which is the same processor powering the Galaxy A50s, There are two variants of the Galaxy M30s, 4GB RAM with 64GB of storage and 6GB of RAM with 128GB of storage. The processor isn't as powerful as the Snapdragon 675 SoC but is on par with the Snapdragon 710 SoC. we are facing frame lag while playing pubg at higher graphic settings.</p>
-          <h4 class="content">Samsung M30s: Key specifications </h4>
+          <h3 style="font-weight: 400;">Samsung M30s: Key specifications </h3>
           <ul class="content">
             <li>Diaplay: 	6.4 inches, 1080 x 2340 pixels, 19.5:9 ratio (~403 ppi density)</li>
             <li>Exynos 9611 (10nm)</li>
@@ -284,20 +272,17 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
-
-
         </div>
         <!-- 9 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">9. Vivo Z1 Pro</h2>
+          <h2 style="font-weight: 400;">9. Vivo Z1 Pro</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/pubg/vivo-z1-pro.jpg' %}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com: uploaded by: 5-Minutes Tech</p>
-          <h4 class="content">About Vivo Z1 Pro</h4>
+          <h3 style="font-weight: 400;">About Vivo Z1 Pro</h3>
           <p class="content"><span>Vivo</span> launched his new smartphone <span>vivo Z1 pro</span> in india starting from 13,990 INR. The Vivo Z1 Pro features an impressive aspect ratio of 19.5:9, which enhances enjoyment while playing games and watching movies. It has a screen resolution of 1,080 x 2,340 pixels over the IPS LCD display type. The Vivo Z1 Pro powered by a <span>Qualcomm Snapdragon 712</span> chipset, where an octa-core processor setup containing two Kryo 360 processors (a 2.3GHz dual-core and a 1.7GHz Hexacore)is placed.</p>
-          <h4 class="content">Vivo Z1 Pro: Key specifications </h4>
+          <h3 style="font-weight: 400;">Vivo Z1 Pro: Key specifications </h3>
           <ul class="content">
             <li>Diaplay: 6.53 inches, 1080 x 2340 pixels, 19.5:9 ratio (~395 ppi density)</li>
             <li>Qualcomm SDM712 Snapdragon 712 (10 nm)</li>
@@ -317,19 +302,17 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
-
         </div>
         <!-- 10 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">10. Realme 5s</h2>
+          <h2 style="font-weight: 400;">10. Realme 5s</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/pubg/realme-5s.jpg' %}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com: Uploaded by: Inspire2Rise</p>
-          <h4 class="content">About Realme 5s</h4>
+          <h3 style="font-weight: 400;">About Realme 5s</h3>
           <p class="content"><span>Realme 5s</span> resolution is still HD+ (1600x720), which is fine for everyday viewing but not as sharp as a full-HD+ display, which we're seeing increasingly at this price. There is Corning Gorilla Glass 3+ scratch protection for the screen, which is good. You get a Qualcomm Snapdragon 665 SoC, and two variants — one with 4GB of RAM and 64GB of storage 9,999-INR and the other with 4GB of RAM and 128GB of storage 10,999-INR.</p>
-          <h4 class="content">Realme 5s: Key specifications </h4>
+          <h3 style="font-weight: 400;">Realme 5s: Key specifications </h3>
           <ul class="content">
             <li>Diaplay: 6.5-inch, 19:9, HD+ (720 x 1600px), IPS LCD</li>
             <li>Qualcomm  Snapdragon 665</li>
@@ -348,9 +331,6 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
-
-
         </div>
         <!-- 11 -->
       </div>
