--- a/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
+++ b/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
@@ -3,7 +3,7 @@
 {% block key%}<meta name="keywords" content="pubg mobile phone under 20000, pubg mobile phone price, pubg mobile phone requirements, pubg mobile phone amazon, pubg mobile requirements android phone"> {% endblock key%}
   {% load static %}
     {% block title%}Best PUBG mobile between under 10,000-20,000 INR - HipeIn.com{% endblock title%}
-    {% block actmob%} class="active"{% endblock actmob%}
+    {% block actart%} class="active"{% endblock actart%}
     {% block content%}
     <!-- review and spec -->
     <div class="wrapper">
