--- a/limbo/affiliate/templates/blog/apps/game/top-10-android-game.html
+++ b/limbo/affiliate/templates/blog/apps/game/top-10-android-game.html
@@ -278,7 +278,7 @@
       </div>
       <hr class="my-2">
     </div>
-    <p>If you are looking for a good game right now, then once you check <a href="https://wefindgames.com/"></a>Wefanganj.com, on this website you have a lot of games sorted in a good way.</p>
+    <p>If you are looking for a good game right now, then once you check <a href="https://wefindgames.com/">Wefanganj.com</a>, on this website you have a lot of games sorted in a good way.</p>
     <p>I hope this "<b>best android games for free in 2020</b>" article will help you a lot in finding the best game for you. Hey, i am prince singh rajput you can follow me on <a href="https://rb.gy/5rrdsp">instagram- prince_singh_rajput8</a>.</p>
     <h3 style="font-weight: 400;">Thankyou :)</h3><br>
     <!-- 11 -->
