--- a/limbo/affiliate/templates/blog/apps/game/top-10-android-game.html
+++ b/limbo/affiliate/templates/blog/apps/game/top-10-android-game.html
@@ -280,6 +280,7 @@
     </div>
     <p>If you are looking for a good game right now, then once you check <a href="https://wefindgames.com/">Wefanganj.com</a>, on this website you have a lot of games sorted in a good way.</p>
     <p>I hope this "<b>best android games for free in 2020</b>" article will help you a lot in finding the best game for you. Hey, i am prince singh rajput you can follow me on <a href="https://rb.gy/5rrdsp">instagram- prince_singh_rajput8</a>.</p>
+    <a href="https://www.blogadda.com" title="Discover latest Indian Blogs"> <img src="https://www.blogadda.com/images/blogadda.png" width="80" height="15" border="0" alt="Discover latest Indian Blogs" /></a>
     <h3 style="font-weight: 400;">Thankyou :)</h3><br>
     <!-- 11 -->
   </div>
