--- a/limbo/affiliate/templates/blog/game/free uc/free uc.html
+++ b/limbo/affiliate/templates/blog/game/free uc/free uc.html
@@ -15,7 +15,7 @@
       <div class="main">
         <div class="headline2">
           <h1 class="content_tittle" style="font-weight: 400;" >How to get free UC in PUBG mobile in 2020</h1>
-          <p>Written By<a href="#">Prince Singh Rajput</a>- Updated on <b style="color: gray;">22 August 2020</b></p>
+          <p>Written By <a href="https://www.instagram.com/rohit_raj0036/?hl=en">Rohit Raj</a>- Updated on <b style="color: gray;">22 August 2020</b></p>
           <hr class="my-2">
           <p>If you like to play mobile games then you must have heard about your most popular mobile game PUBG mobile. Talk about the annual earnings of PUBG is around 206 million dollars. PUBG Mobile makes a lot of money due to many in-game items such as skins, outfits, and emotions that can be purchased by players using in-game currency (UC).</p>
           <img class="image" src="{% static 'image/mobile/pubg/PUBG-mobile.jpg'%}" alt=""><p></p>
@@ -52,6 +52,8 @@
           <p></p>
           <p>I hope you got a lot of help with this article "<b>How to get free UC in PUBG mobile in 2020</b>". If you have any questions, you can comment below or you can also message on our Instagram id.</p>
           <hr class="my-2">
+          <div class="fb-comments" data-href="https://www.hipein.com/game/how-to-get-free-uc" data-numposts="5" data-width=""></div>
+          <p></p>
         </div>
         <!--  -->
       </div>
