--- a/limbo/affiliate/templates/blog/game/free uc/free uc.html
+++ b/limbo/affiliate/templates/blog/game/free uc/free uc.html
@@ -6,7 +6,7 @@
     {% block content%}
     {% block style %}
     <style>
-      p{font-family: sans-serif;font-size: 17px; line-height: 30px;}footer p{font-size: 16px; line-height: 20px;}@media (max-width: 768px){p{font-size: 19px;}.content{font-size: 18px;}footer p{font-size: 14px; line-height: 20px;}}
+      p{font-family: sans-serif;font-size: 17px;}footer p{font-size: 15px; line-height: 20px;}@media (max-width: 768px){p{font-size: 19px;}.content{font-size: 18px;}footer p{font-size: 14px; line-height: 20px;}}
     </style>
     {% endblock style %}
     <!-- review and spec -->
