--- a/limbo/affiliate/templates/page/basic.html
+++ b/limbo/affiliate/templates/page/basic.html
@@ -259,7 +259,7 @@
         </script>
       <script>
         $(document).ready(function() {
-          $('.card,.link1,.link2,.link3,.link4,.link5').hover(
+          $('.link1,.link2,.link3,.link4,.link5').hover(
               function(){
                 $(this).animate({
                   marginTop:"-=.3%",
@@ -270,18 +270,6 @@
                   marginTop:"+=.3%"
                 },200);
               }
-            );
-            $('.card').hover(
-                function(){
-                  $(this).animate({
-                    marginTop:"-=2%",
-                  },200);
-                },
-                function(){
-                  $(this).animate({
-                    marginTop:"+=2%"
-                  },200);
-                }
             );
           });
       </script>
