--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -121,14 +121,14 @@
     </div>
     <!-- main page content -->
     <div class="main">
-      <h2 class="heading">Most Popular</h2>
+      <h2 class="heading">Mobiles</h2>
     </div>
     <!-- content -->
     <div class="card-group">
       <div class="card">
         <img src="{% static 'image/article/mobile/upcoming mobile/poco-c3.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
-          <h3><span>REVIEW</span> POCO C3 : 3/32GB  Watch Full review.</h3>
+          <h4><span>REVIEW</span> POCO C3 : 3/32GB  Watch Full review.</h4>
         </div>
         <div class="card-body card-body1">
           <ul>
@@ -166,28 +166,28 @@
       </div>
     </div>
     <div class="main">
-      <h2 class="heading">Apps</h2>
+      <h2 class="heading">Article</h2>
     </div>
     <div class="card-group">
       <div class="card">
-        <img src="{% static 'image/mobile/pubg/PUBG-mobile.jpg'%}" class="card-img-top" alt="...">
+        <img src="{% static 'image/article/apps/game/game-mobile.jpg'%}" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Top 10 best android games for free in 2020</h5>
+          <p class="card-text">Everybody likes to play mobile games in the 20th century,  whether they are children or  youngsters we all love to play mobile games in our free time. As technology is increasing, the experience of playing mobile games is also increasing.</p>
         </div>
       </div>
       <div class="card">
-        <img src="{% static 'image/mobile/pubg/PUBG-mobile.jpg'%}" class="card-img-top" alt="...">
+        <img src="{% static 'image/article/apps/filmorago/filmorago.jpg'%}" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <h5 class="card-title">FilmoraGo - Best video editing app in 2020</h5>
+          <p class="card-text">It is very easy to use. flimorago is the best video editing app in 2020 with advanced features. It has more than 50 million downloads and nearly 417k user reviews according to the google play store.</p>
         </div>
       </div>
       <div class="card">
         <img src="{% static 'image/mobile/pubg/PUBG-mobile.jpg'%}"  class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <h5 class="card-title">How to add a search bar in Django site</h5>
+          <p class="card-text">In this article, we are going to learn how to add a search bar on your website using the Django web framework. if don't know about the Django web framework <a href="https://docs.djangoproject.com/en/3.0/">click here</a>.</p>
         </div>
       </div>
     </div>
