--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -187,7 +187,7 @@
     <div class="card-group">
       <div class="card">
         <a href="{% url 'androidgame' %}"><img src="{% static 'image/article/apps/game/game-mobile.jpg'%}" class="card-img-top" alt="...">
-        <div class="image-text">
+        <div class="image-text1">
           <h4>Top 10 best <span>android games</span> for free in 2020</h4>
         </div></a>
         <div class="card-body card-text1">
@@ -196,7 +196,7 @@
       </div>
       <div class="card">
         <a href="{% url 'filmorago' %}"><img src="{% static 'image/article/apps/filmorago/filmorago.jpg'%}" class="card-img-top" alt="...">
-        <div class="image-text">
+        <div class="image-text1">
           <h4><span>FilmoraGo</span>- Best video editing app in 2020</h4>
         </div></a>
         <div class="card-body card-text1">
@@ -205,7 +205,7 @@
       </div>
       <div class="card">
         <a href="{% url 'searchbar' %}"><img src="{% static 'image/mobile/pubg/PUBG-mobile.jpg'%}"  class="card-img-top" alt="...">
-        <div class="image-text">
+        <div class="image-text1">
           <h4>How to add a search bar in <span>Django</span> site</h4>
         </div></a>
         <div class="card-body card-text1">
