--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -21,9 +21,9 @@
       .card-group a:hover{
         color: blue;
       }
-      .image-text {
+      .image-text{
         position: absolute;
-        top: 52%;
+        top: 36%;
         left: 6px;
       }
       .image-text h4{
@@ -32,7 +32,7 @@
       }
       .image-text1{
         position: absolute;
-        top: 45%;
+        top: 47%;
         left: 6px;
       }
       .image-text1 h4{
@@ -69,18 +69,13 @@
       }
       @media (max-width: 768px){
         .carousel-item img{
-          height: 200px;
+          height: 220px;
         }
         .card-group{
           width: 100%;
           margin-left: 0px;
         }
-        .image-text {
-          position: absolute;
-          top: 56%;
-          left: 6px;
-        }
-      }
+       }
     </style>
     {% endblock style %}
     {% block title%}hipein.com - mobile phone review and specification |article  {% endblock title%}
@@ -143,7 +138,7 @@
     <div class="card-group">
       <div class="card">
         <a href="{% url 'pococ3' %}"><img src="{% static 'image/article/mobile/upcoming mobile/poco-c3.jpg'%}" class="card-img-top" alt="...">
-        <div class="image-text">
+        <div class="image-text1">
           <h4><span>REVIEW</span> POCO C3 : 3/32GB  Watch Full review.</h4>
         </div></a>
         <div class="card-body card-body1">
@@ -156,7 +151,7 @@
       </div>
       <div class="card">
         <a href="{% url 'OnePlus_nord' %}"><img src="{% static 'image/mobile/oneplus/oneplus-nord-2.jpg' %}" class="card-img-top" alt="...">
-        <div class="image-text">
+        <div class="image-text1">
           <h4><span>REVIEW</span> onePlus nord 5G : 6/64GB Watch Full review</h4>
         </div></a>
         <div class="card-body card-body1">
@@ -164,12 +159,13 @@
             <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>What can be the price of onePlus nord in India?</b></p></a></li>
             <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>When can onePlus nord be released in India?</b></p></a></li>
             <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>Full specification</b></p></a></li>
-          </ul>
+          </ul
+          <p></p>
         </div>
       </div>
       <div class="card">
         <a href="{% url 'note20ultra' %}"><img src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-note-20-ultra.jpg'%}"  class="card-img-top" alt="...">
-        <div class="image-text">
+        <div class="image-text1">
           <h4><span>REVIEW</span> Samsung Galaxy Note 20 ultra : 8/256GB Watch Full review</h4>
         </div></a>
         <div class="card-body card-body1">
